lab files added

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="app.css">
 </head>
 <body>
+    <div id="test"></div>
     <!-- DO NOT ADD ANY HTML HERE -->
     <!-- YOU MAY IMPORT HERE -->
     <script src="app.js"></script>
